[gd_scene load_steps=35 format=3 uid="uid://oy8jux68hmbe"]

[ext_resource type="Script" uid="uid://dlm8cojwy0401" path="res://Scripts/player_movement.gd" id="1_i3pqv"]
[ext_resource type="Resource" uid="uid://dch0f4net8iak" path="res://Resource/Stat Sheets/Player.tres" id="2_op7ga"]
[ext_resource type="Script" uid="uid://cuyuepwwk7yau" path="res://Scripts/weapon_component.gd" id="3_hqtel"]
[ext_resource type="Shader" uid="uid://bsy820uhpcc40" path="res://Resource/Shaders/hit_flash.tres" id="3_pbfsw"]
[ext_resource type="Texture2D" uid="uid://bavxkfnpk8dhb" path="res://Assets/Sprites/Player_sprite_sheet.png" id="3_u1c27"]
[ext_resource type="Script" uid="uid://dl04sydy5uj2y" path="res://Scripts/Components/inv_component.gd" id="3_urp6f"]
[ext_resource type="Script" uid="uid://dskheke6u5w3" path="res://Scripts/Components/health_component.gd" id="4_op7ga"]
[ext_resource type="Script" uid="uid://b671ntilkvvgb" path="res://Scripts/HurtBox.gd" id="4_q13i1"]
[ext_resource type="Script" uid="uid://7cwtyeutrts4" path="res://Scripts/Hitbox.gd" id="5_sweqy"]
[ext_resource type="Script" uid="uid://nxlbgvyixghw" path="res://Scripts/States/state_machine.gd" id="6_2hs0m"]
[ext_resource type="Script" uid="uid://bpqe0gx4e6mps" path="res://Scripts/States/Player/idle.gd" id="7_1jxqw"]
[ext_resource type="Script" uid="uid://b3gdube56na0l" path="res://Scripts/States/Player/move.gd" id="8_dw050"]
[ext_resource type="Script" uid="uid://ds1rxoj2dns4c" path="res://Scripts/States/Player/attack_one.gd" id="9_b26j0"]
[ext_resource type="Script" uid="uid://drwdxykreh4fg" path="res://Scripts/States/Player/attack_two.gd" id="10_n7ghd"]
[ext_resource type="Script" uid="uid://cs0h5h4e0m7gx" path="res://Scripts/States/Player/attack_three.gd" id="11_nvl01"]
[ext_resource type="Script" uid="uid://sgpccnrpg5s1" path="res://Scripts/States/Enemy/stun.gd" id="11_u1c27"]
[ext_resource type="Script" uid="uid://boq5clddjwd1a" path="res://Scripts/camera_2d.gd" id="15_606se"]
[ext_resource type="Texture2D" uid="uid://cbvr5fvkxu8ke" path="res://Assets/Sprites/Lantern.png" id="15_u1c27"]
[ext_resource type="Texture2D" uid="uid://c44rdyc70dkku" path="res://Assets/Sprites/light.png" id="16_op7ga"]
[ext_resource type="Script" uid="uid://5dbfn8ru3qax" path="res://Scripts/Class/camera_shake.gd" id="19_pylmc"]
[ext_resource type="Script" uid="uid://d0310rsv5fjno" path="res://Scripts/Class/tile_data.gd" id="21_5tmop"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5tmop"]
resource_local_to_scene = true
shader = ExtResource("3_pbfsw")
shader_parameter/enabled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_606se"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_u1c27")
}],
"loop": false,
"name": &"Attack_One",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_u1c27")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_u1c27")
}],
"loop": true,
"name": &"Walk",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_7ahtn"]
resource_name = "Hurt"
length = 0.035
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_pbfsw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.035),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.2]
}

[sub_resource type="Animation" id="Animation_pbfsw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer:speed_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7lmhl"]
_data = {
&"Hurt": SubResource("Animation_7ahtn"),
&"RESET": SubResource("Animation_pbfsw")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2hs0m"]
size = Vector2(50, 30)

[sub_resource type="CircleShape2D" id="CircleShape2D_pylmc"]
radius = 73.0616

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2hs0m"]
radius = 84.0
height = 232.0

[sub_resource type="Animation" id="Animation_2hs0m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon_component/Scythe/Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_sweqy"]
resource_name = "scythe combo 1"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon_component/Scythe/Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_n7ghd"]
resource_name = "scythe combo 2"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon_component/Scythe/Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_nvl01"]
resource_name = "scythe combo 3"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon_component/Scythe/Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1jxqw"]
_data = {
&"RESET": SubResource("Animation_2hs0m"),
&"scythe combo 1": SubResource("Animation_sweqy"),
&"scythe combo 2": SubResource("Animation_n7ghd"),
&"scythe combo 3": SubResource("Animation_nvl01")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_i3pqv")
stat_sheet = ExtResource("2_op7ga")

[node name="sprite_body" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
texture_filter = 1
material = SubResource("ShaderMaterial_5tmop")
position = Vector2(-10, 0)
sprite_frames = SubResource("SpriteFrames_606se")
animation = &"Attack_One"
autoplay = "Idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="sprite_body"]
libraries = {
&"": SubResource("AnimationLibrary_7lmhl")
}

[node name="collision_body" type="CollisionShape2D" parent="."]
position = Vector2(5, 75)
shape = SubResource("RectangleShape2D_2hs0m")

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("state_machine", "body")]
script = ExtResource("4_q13i1")
state_machine = NodePath("../state_machine")
body = NodePath("..")
metadata/_custom_type_script = "uid://b671ntilkvvgb"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_pylmc")

[node name="health_component" type="Node" parent="." node_paths=PackedStringArray("sprite_animation", "character_body")]
script = ExtResource("4_op7ga")
sprite_animation = NodePath("../sprite_body/AnimationPlayer")
character_body = NodePath("..")
metadata/_custom_type_script = "uid://dskheke6u5w3"

[node name="inventory_component" type="Node" parent="."]
script = ExtResource("3_urp6f")
minor_souls_count = 999
metadata/_custom_type_script = "uid://dl04sydy5uj2y"

[node name="state_machine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
unique_name_in_owner = true
script = ExtResource("6_2hs0m")
initial_state = NodePath("idle")

[node name="idle" type="Node" parent="state_machine"]
script = ExtResource("7_1jxqw")
metadata/_custom_type_script = "uid://uhkfqp2cc5p4"

[node name="move" type="Node" parent="state_machine"]
script = ExtResource("8_dw050")
metadata/_custom_type_script = "uid://uhkfqp2cc5p4"

[node name="stun" type="Node" parent="state_machine" node_paths=PackedStringArray("body", "health_component")]
script = ExtResource("11_u1c27")
body = NodePath("../..")
health_component = NodePath("../../health_component")
metadata/_custom_type_script = "uid://sgpccnrpg5s1"

[node name="attack_one" type="Node" parent="state_machine"]
script = ExtResource("9_b26j0")
metadata/_custom_type_script = "uid://uhkfqp2cc5p4"

[node name="attack_two" type="Node" parent="state_machine"]
script = ExtResource("10_n7ghd")
metadata/_custom_type_script = "uid://uhkfqp2cc5p4"

[node name="attack_three" type="Node" parent="state_machine"]
script = ExtResource("11_nvl01")
metadata/_custom_type_script = "uid://uhkfqp2cc5p4"

[node name="weapon_component" type="Node2D" parent="."]
script = ExtResource("3_hqtel")

[node name="Scythe" type="Node2D" parent="weapon_component"]

[node name="Hitbox" type="Area2D" parent="weapon_component/Scythe" node_paths=PackedStringArray("killer")]
visible = false
position = Vector2(160, 0)
collision_layer = 0
collision_mask = 0
script = ExtResource("5_sweqy")
killer = NodePath("../../..")
damage = 20
knockback_force = 20
stun_time = 1.0
metadata/_custom_type_script = "uid://7cwtyeutrts4"

[node name="CollisionShape2D" type="CollisionShape2D" parent="weapon_component/Scythe/Hitbox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_2hs0m")
disabled = true
debug_color = Color(0.992157, 0, 0, 0.419608)

[node name="Cooldown" type="Timer" parent="weapon_component/Scythe"]
wait_time = 0.3
one_shot = true

[node name="ComboCooldown" type="Timer" parent="weapon_component/Scythe"]
wait_time = 0.5
one_shot = true

[node name="Lamp" type="Node2D" parent="weapon_component"]
position = Vector2(-142, -152)

[node name="weapon_sprite" type="Sprite2D" parent="weapon_component/Lamp"]
texture_filter = 1
position = Vector2(2.86102e-06, 43)
scale = Vector2(0.8, 0.8)
texture = ExtResource("15_u1c27")

[node name="PointLight2D" type="PointLight2D" parent="weapon_component/Lamp/weapon_sprite"]
position = Vector2(0, 10)
scale = Vector2(1.25, 1.25)
color = Color(0.411765, 0.686275, 1, 1)
energy = 2.0
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 50.0
texture = ExtResource("16_op7ga")
texture_scale = 3.0

[node name="firing_position" type="Marker2D" parent="weapon_component/Lamp"]
position = Vector2(2, 56)

[node name="Cooldown" type="Timer" parent="weapon_component/Lamp"]
wait_time = 0.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="weapon_component"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_1jxqw")
}
autoplay = "RESET"

[node name="player_camera" type="Camera2D" parent="." node_paths=PackedStringArray("target")]
zoom = Vector2(0.25, 0.25)
position_smoothing_speed = 10.0
script = ExtResource("15_606se")
target = NodePath("..")
sensitivity = 1.0
metadata/_custom_type_script = "uid://boq5clddjwd1a"

[node name="CameraShake" type="Node" parent="player_camera"]
script = ExtResource("19_pylmc")
metadata/_custom_type_script = "uid://5dbfn8ru3qax"

[node name="tile_data" type="TileMapLayer" parent="."]
script = ExtResource("21_5tmop")
metadata/_custom_type_script = "uid://d0310rsv5fjno"

[connection signal="timeout" from="weapon_component/Scythe/Cooldown" to="weapon_component" method="_on_cooldown_timeout"]
[connection signal="timeout" from="weapon_component/Scythe/ComboCooldown" to="weapon_component" method="_on_combo_cooldown_timeout"]
[connection signal="timeout" from="weapon_component/Lamp/Cooldown" to="weapon_component" method="_on_cooldown_timeout_lamp"]
